tests/lean/mutwftypemismatch.lean.expected.out
mutwftypemismatch.lean:11:20-11:25: error: The termination argument types differ for the different functions, or depend on the function's varying parameters. Try using `sizeOf` explicitly:
The termination argument has type
  Prop : Type
but is expected to have type
  Nat : Type
mutwftypemismatch.lean:5:10-5:15: error: failed to prove termination, possible solutions:
  - Use `have`-expressions to prove the remaining goals
  - Use `termination_by` to specify a different well-founded relation
  - Use `decreasing_by` to specify your own tactic for discharging this kind of goal
n : Nat
⊢ sorryAx Nat true < Nat.succ n
mutwftypemismatch.lean:18:4-18:7: warning: declaration uses 'sorry'
mutwftypemismatch.lean:18:4-18:7: warning: declaration uses 'sorry'
mutwftypemismatch.lean:18:4-18:7: warning: declaration uses 'sorry'
